Revision history for Module-Metadata

{{$NEXT}}

1.000027  2015-04-11 00:21:26Z
  - work around issues with an unconfigured Log::Contextual (Kent Fredric)
  - allow tests to pass in a perl with no taint support (James Raspass)

1.000026  2015-01-17 19:22:34Z
  - patched tests to be less noisy in blead builds (Dave Mitchell, RT#101491)

1.000025  2015-01-04 18:56:00Z
  - evaluate version assignment in a clean environment, to fix assignment in a
    block (RT#101095)

1.000024  2014-06-03 01:52:46Z
  - fix inaccurate prerequisite declaration on Test::More (in 1.000023)

1.000023  2014-06-02 02:37:17Z
  - support installations on older perls with an ExtUtils::MakeMaker earlier
    than 6.63_03

1.000022 - 2014-04-29
  - work around change in comparison behaviour in Test::More 0.95_01 by being
    more explicit with our tests - now explicitly checking the string form of
    the extracted version, rather than the entire version object
  - ensure the extracted version is returned as a version object in all cases
    (RT#87782, Randy Stauner)

1.000021 - 2014-04-29
  - fix use of newer interface from File::Path, to avoid another prereq on
    older perls (Graham Knop, PR#7)
  - fixed all out of date prereq declarations

1.000020 - 2014-04-27
  - new is_indexable() object method (ether, RT#84357)
  - eliminated dependency on IO::File (and by virtue, XS) - thanks, leont!
  - removed cruft in test infrastructure left behind from separation from
    Module::Build (ether)
  - repository moved to https://github.com/Perl-Toolchain-Gang/Module-Metadata
  - .pm file is now wholly ascii, for nicer fatpacking (RT#95086)
  - some code micro-optimizations (Olivier Mengué, PR#4)

1.000019 - 2013-10-06
  - warnings now disabled inside during the evaluation of generated version
    sub (BinGOs, RT#89282)

1.000018 - 2013-09-11
  - re-release of detainting fix without unstated non-core test dependencies

1.000017 - 2013-09-10
  - detaint version, if needed (RT#88576, Chris Williams)
